# streamlit-shortcuts

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py  streamlit_shortcuts.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  cliff.toml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  workflow.yml
example/: requirements.txt
src/streamlit_shortcuts/: __init__.py  scripts.py  streamlit_shortcuts.py
src/streamlit_shortcuts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_streamlit_shortcuts.py
